--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,19 +73,19 @@ Version: 1.0.0
 /*------------------- 1.2. Function -------------------*/
 /*------------------- 1.3. Variable-------------------*/
 :root {
-  --theme-color: #29ABE2;
-  --theme-color2: #7CB342;
-  --theme-color3: #E7E9EB;
-  --vs-secondary-color: #70727A;
-  --title-color: #282A2D;
-  --body-color: #3F4144;
-  --smoke-color: #F7F7F7;
-  --black-color: #282A2D;
-  --white-color: #FFFFFF;
-  --yellow-color: #F9E985;
-  --success-color: #2ECC71;
-  --error-color: #E74C3C;
-  --border-color: #E3E3E3;
+  --theme-color: #3747FF;
+  --theme-color2: #FFCC33;
+  --theme-color3: #626FFF;
+  --vs-secondary-color: #2F2552;
+  --title-color: #000000;
+  --body-color: #444444;
+  --smoke-color: #F3F3F3;
+  --black-color: #000000;
+  --white-color: #ffffff;
+  --yellow-color: #fec624;
+  --success-color: #28a745;
+  --error-color: #dc3545;
+  --border-color: #e8e8e8;
   --title-font: "DM Sans", sans-serif;
   --body-font: "DM Sans", sans-serif;
   --icon-font: "Font Awesome 5 Pro";
