--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ Version: 1.0.0
 /*------------------- 1.3. Variable-------------------*/
 :root {
   --theme-color: #29ABE2;
-  --theme-color2: #7CB342;
+  --theme-color2: #FFD800;
   --theme-color3: #E7E9EB;
   --vs-secondary-color: #70727A;
   --title-color: #282A2D;
